--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Simple CI/CD Pipeline for CSE 270
+name: Simple CI/CD Pipeline for CSE 270 - Savanna Whittaker
 
 on:
   # Runs on pushes targeting the default branch
